--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,8 +20,33 @@ body {
   background-color: #111;
   color: #fff;
   position: relative;
+  overflow-x: hidden;
 }
-
+.primaryBtn {
+  outline: none;
+  border: none;
+  padding: 0.3rem 1.3rem;
+  font-size: 1.3em;
+  font-weight: bold;
+  background: $color;
+  border: 2px solid $color;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  &:hover {
+    background-color: #111;
+    color: $color;
+    letter-spacing: 1.5px;
+  }
+  a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #111;
+  }
+  &:hover a {
+    color: $color;
+    text-decoration: underline;
+  }
+}
 #navBar {
   position: absolute;
   top: 0;
@@ -35,14 +60,15 @@ body {
   margin: 0 auto;
 }
 .navigation {
-  height: 3rem;
+  height: 8vh;
   @include flex(space-between);
+  position: relative;
   h2 {
     font-weight: bold;
     font-size: 1.7em;
     color: $color;
   }
-  ul {
+  .nav-links {
     @include flex(space-between);
     li {
       margin-left: 2rem;
@@ -53,6 +79,16 @@ body {
         font-weight: 500;
         color: #fff;
       }
+    }
+  }
+  .burger {
+    display: none;
+    div {
+      width: 25px;
+      height: 3px;
+      background-color: #fff;
+      margin: 5px;
+      transition: all 0.3s ease;
     }
   }
 }
@@ -66,6 +102,9 @@ body {
 
   .imgBx {
     width: 32.5vw;
+    img {
+      width: 100%;
+    }
   }
   .content {
     width: 32.5vw;
@@ -83,32 +122,6 @@ body {
       padding-top: 0.5rem;
       padding-bottom: 1rem;
       letter-spacing: 1px;
-    }
-
-    .primaryBtn {
-      outline: none;
-      border: none;
-      padding: 0.3rem 1.3rem;
-      font-size: 1.3em;
-      font-weight: bold;
-      background: $color;
-      border: 2px solid $color;
-      transition: all 0.3s ease-in-out;
-      cursor: pointer;
-      &:hover {
-        background-color: #111;
-        color: $color;
-        letter-spacing: 1.5px;
-      }
-      a {
-        text-decoration: none;
-        cursor: pointer;
-        color: #111;
-      }
-      &:hover a {
-        color: $color;
-        text-decoration: underline;
-      }
     }
 
     .secondaryBtn {
@@ -172,36 +185,18 @@ body {
         line-height: 1.7;
         margin-bottom: 1rem;
       }
+      button {
+        font-size: 1em;
+      }
     }
     h2 {
       border-bottom: 3px solid $color;
       margin: 1rem 0;
       display: inline;
     }
-    .skill {
-      @include flex(space-between);
-      align-items: flex-start;
-      flex-direction: row;
-      margin-top: 2rem;
-      .item {
-        margin-bottom: 30px;
-        position: relative;
-        margin-right: 20px;
-        @include flex(center);
-        flex-direction: column;
-      }
-      .chart {
-        .persent {
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -10%);
-        }
-      }
-    }
   }
   .imgBx {
-    width: 150%;
+    width: 100%;
     img {
       width: 100%;
     }
@@ -211,11 +206,12 @@ body {
 /*start services*/
 .services {
   min-height: 90vh;
-  @include flex(space-between);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
   .card {
     margin-top: 50px;
     margin-right: 5px;
-    width: 30%;
     height: 400px;
     @include flex(space-around);
     flex-direction: column;
@@ -256,13 +252,14 @@ body {
 /*end services*/
 /*start project*/
 .project {
-  @include flex(space-between);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
   padding-top: 100px;
 
   a {
     list-style: none;
     color: #111;
-    width: 450px;
     margin-top: 30px;
     margin-right: 5px;
   }
@@ -432,3 +429,149 @@ input[type="submit"] {
   border-radius: 2px;
 }
 /*end contact*/
+/*start footer */
+#footer {
+  width: 100%;
+  border-top: 2px solid $color;
+  height: 50px;
+}
+.footer {
+  @include flex(space-between);
+  flex-direction: row;
+  width: 75vw;
+  height: 100%;
+  margin: 0 auto;
+  i {
+    color: #f1ec40;
+    opacity: 0.7;
+    transition: opacity 0.2s ease-in-out;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  ul {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    li {
+      list-style: none;
+    }
+  }
+}
+/*end footer*/
+/**/
+
+@media (max-width: 1300px) {
+  .navigation {
+    .burger {
+      display: block;
+      cursor: pointer;
+    }
+    .nav-links {
+      position: absolute;
+      right: 0px;
+      height: 92vh;
+      top: 8vh;
+      background-color: #111;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 50%;
+      transform: translateX(100%);
+      transition: transform 0.5s ease-in;
+      padding: 5rem 0;
+      li {
+        opacity: 0;
+      }
+    }
+    .nav-active {
+      transform: translateX(0%);
+    }
+  }
+
+  .hero {
+    flex-direction: column;
+    justify-content: center;
+    .content {
+      width: 100%;
+      text-align: center;
+    }
+    .imgBx {
+      width: 100%;
+    }
+  }
+  .about {
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    .content {
+      margin-bottom: 8rem;
+    }
+    .imgBx {
+      width: 100%;
+    }
+  }
+  #services {
+    .title {
+      margin-bottom: 50px;
+    }
+  }
+  .services {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    .card {
+      margin: 0;
+    }
+  }
+  .project {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 767px) {
+  .hero {
+    .content {
+      margin-bottom: 50px;
+      h1 {
+        font-size: 2.5em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
+    }
+  }
+  .services {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+  }
+  .project {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .navigation {
+    .nav-links {
+      width: 100%;
+    }
+  }
+}
+/**/
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+  transform: translateX(-20px);
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
