--- a/scss/main.css
+++ b/scss/main.css
@@ -789,6 +789,7 @@ input[type="submit"] {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
     grid-gap: 30px;
+    margin-bottom: 40px;
   }
   .project {
     -ms-grid-columns: (1fr)[1];
@@ -796,6 +797,7 @@ input[type="submit"] {
   }
   .navigation .nav-links {
     width: 100%;
+    position: fixed;
   }
 }
 
